# inno-kb

./: .gitignore  README.md  organize_inbox.py  pyproject.toml
00_Inbox/: Chatgpt 개인 맞춤형 지침.md  Obsidian x NVIDIA API collab.md  국내 주식 자동 매매 시스템 Obsidian 정리 구조.md  국내 주식 자동 매매 시스템 개발 RoadMap.md  국내 주식 자동 매매 시스템 프로젝트 개요.md
10_Projects/AutoTrading/: 국내 주식 자동 매매 시스템 개발 RoadMap.md
30_Concepts/AutoTrading/: 국내 주식 자동 매매 시스템 Obsidian 정리 구조.md  국내 주식 자동 매매 시스템 프로젝트 개요.md
50_Decisions/Codex-Workflow/: Ouroboros 셋업.md  Superpowers plugin 셋업.md
50_Decisions/common/: Chatgpt 개인 맞춤형 지침.md
60_Temaplates/: Template - Project.md.md
60_Templates/: Template - Concept.md  Template - Concept.md.md  Template - Decision.md  Template - Decision.md.md  Template - Project.md  Template - Research.md  Template - Research.md.md
config/: obsidian_ai.example.yaml
docs/: phase-2-e2e-verification-2026-07-01.md  phase-3-automation.md  phase-4-operational-hardening.md
scripts/: apply_approved_proposals.py  ask_vault.py  index_obsidian_vault.py  organize_codex_inbox_with_nvidia.py  run_obsidian_ai_pipeline.py  run_obsidian_ai_pipeline.sh  validate_obsidian_ai_pipeline.py
src/inno_obsidian_ai/: __init__.py  audit.py  chunker.py  config.py  rag.py  (+9 more)
tests/: conftest.py  test_apply_proposals.py  test_ask_vault_script.py  test_chunker.py  test_config.py  test_index_script.py  test_manifest.py  test_markdown_loader.py  test_nvidia_client.py  test_nvidia_client_embed.py  test_organizer.py  test_pipeline.py  test_proposal_parser.py  test_rag.py  test_safety.py  test_validate_pipeline_script.py
(+58 files in other folders)
