[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inno-obsidian-ai"
version = "0.1.0"
description = "Obsidian organizer and RAG pipeline for Codex working logs"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=1.0.0",
  "PyYAML>=6.0.1",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
